Incomplete ContextMenu overhaul +stuff